--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.button {
+  padding: 5px 10px;
+  display: inline-block;
+  color: #ffffff;
+  background-color: #00b9ff;
+  border-radius: 5px;
+  margin-right: 5px;
+}
