--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,14 @@ body {
   background-color: #00b9ff;
   border-radius: 5px;
   margin-right: 5px;
+  moz-user-select: -moz-none;
+  -moz-user-select: none;
+  -o-user-select:none;
+  -khtml-user-select:none;
+  -webkit-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+}
+.button-ex {
+  margin-top: 10px;
 }
